finished bottom half of email

--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
                                         <div style="border-top:2px solid #484848; line-height:0"> &nbsp; </div>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td style="border-collapse:collapse">
 
-                                    </td>
-                                </tr>
 
                             </table>
                             <!-- menu item -->
@@ -225,7 +221,7 @@
                     <!-- line br -->
                     <tr>
                         <td class="divider-mini py-sm-1 px-sm-1" height="10" style="padding:10px 20px;border: 2px;">
-                            <div style=" border-top: 10px solid #7f7f7f; line-height: 0;" width="100"> &nbsp; </div>
+                            <div style=" border-top: 1px solid #7f7f7f; line-height: 0;" width="100"> &nbsp; </div>
                         </td>
                     </tr>
 
@@ -236,8 +232,6 @@
                                 <tr>
                                     <td width="600" style="padding-left: 20px;padding-right: 20px;">
                                         <table>
-
-
                                             <tr>
                                                 <td align="left" width="120px" style="border:2px solid black;margin:0">
                                                     <img src="/images/cord.jpg" alt="cord"
@@ -250,9 +244,7 @@
                                                         &nbsp;</div>
                                                     <a href="google.com"> 4 OUTLET POWER STRIP </a> <br>
                                                     SKU 62495
-
                                                 </td>
-
                                                 <td align="right" valign="top" width="200"
                                                     style="border:2px solid black">
                                                     <div class="sans-serif"
@@ -261,8 +253,6 @@
                                                     $3.99 <br>
                                                     × 1 <br>
                                                     Item Subtotal: <strong>$3.99</strong>
-
-
                                                 </td>
                                             </tr>
                                         </table>
@@ -470,10 +460,143 @@
                     </tr>
                     <!-- end of payment banner -->
                     <!-- start of total purchase with credit info -->
-                    <tr></tr>
+                    <tr>
+                        <td>
+                            <table align="center" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td width="600" style="padding-left: 20px;padding-right: 20px;">
+                                        <table>
+                                            <tr>
+                                                <td align="left" width="400px" style="border:2px solid black;margin:0">
+                                                    <div class="sans-serif"
+                                                        style="border:2px solid black; color: #000000; font-size: 18px; line-height: 50px; font-weight: 700; margin-bottom: 5px;">
+                                                        &nbsp;</div>
+
+                                                    <strong>CreditDebit ************5718</strong> <br>
+                                                    Auth: 05706C
+                                                </td>
+                                                <td align="left" width="100" valign="top"
+                                                    style="border:2px solid black">
+
+                                                    &nbsp;
+
+                                                </td>
+                                                <td align="right" valign="top" width="200"
+                                                    style="border:2px solid black">
+                                                    <div class="sans-serif"
+                                                        style="border:2px solid black; color: #000000; font-size: 18px; line-height: 50px; font-weight: 700; margin-bottom: 5px;">
+                                                        &nbsp;</div>
+                                                    <strong>$21.99</strong>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td width="600" align="center" style="padding:50px 0px 0px 0px;">
+
+                                        <img src="/images/transaction.png" alt="barcode"
+                                            style="height:auto;display:block;">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="center">
+                                        Transaction # 125574
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="center" width="600" style="padding:40px 50px">
+                                        If you received this receipt in error contact <a
+                                            href="google.com">cs@harborfreight.com</a>
+                                        <br> Proof of purchase required for returns/exchanges within 90 days of purchase
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
                     <!-- end of total purchase with credit info with barcode -->
                     <!-- start of footer -->
-                    <tr></tr>
+                    <tr>
+                        <td>
+                            <table cellspacing="0" cellpadding="0" border="0" align="center" width="600"
+                                role="presentation" style="border-collapse:collapse;" class="header">
+
+                                <tr>
+
+                                    <td class="divider-mini px-sm-1" height="5" width="600">
+                                        <div style="border-top:2px solid #484848; line-height:0"> &nbsp; </div>
+                                    </td>
+                                </tr>
+
+
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <table align="center">
+                                <tr>
+                                    <td>
+                                        <img src="/images/twitter.png" alt="twitter" style="height:auto;display:block;">
+                                    </td>
+                                    <td>
+                                        <img src="/images/pinterest.png" alt="pinterest"
+                                            style="height:auto;display:block;">
+                                    </td>
+                                    <td>
+                                        <img src="/images/youtube.png" alt="youtube" style="height:auto;display:block;">
+                                    </td>
+                                    <td>
+                                        <img src="/images/facebook.png" alt="facebook"
+                                            style="height:auto;display:block;">
+                                    </td>
+                                    <td>
+                                        <img src="/images/instagram.png" alt="instagram"
+                                            style="height:auto;display:block;">
+                                    </td>
+                                    <td>
+                                        <img src="/images/tiktok.png" alt="tiktok" style="height:auto;display:block;">
+                                    </td>
+                                </tr>
+
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <table cellspacing="0" cellpadding="0" border="0" align="center" width="600"
+                                role="presentation" style="border-collapse:collapse;" class="header">
+
+                                <tr>
+
+                                    <td class="divider-mini px-sm-1" height="5" width="600">
+                                        <div style="border-top:2px solid #484848; line-height:0"> &nbsp; </div>
+                                    </td>
+                                </tr>
+
+
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <table align="center">
+                                <tr>
+                                    <td align="center" width="600" style="padding:20px 40px 0px ">
+                                        This email was sent to <a href="#">TOMHRNNDZ@GMAIL.COM</a>
+                                        To ensure delivery to your inbox, please add <a
+                                            href="#">hft@em.harborfreight.com</a> to your address book.
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td align="center" width="600">
+                                        Harbor Freight Tools | 26677 Agoura Road | Calabasas, CA 91302 | 1-800-444-3353
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
                     <!-- end of footer -->
                 </table>
 
