image links changed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <tr>
                                     <!-- image title banner -->
                                     <td style="border-collapse:collapse" align="center">
-                                        <img src="/images/title.png" alt="banner" width="300px"
+                                        <img src="https://i.ibb.co/ChBRg4Y/title.png" alt="banner" width="300px"
                                             style="border:0 none;height:auto ;display:inline-block; max-width:300px; width:300px">
                                     </td>
                                 </tr>
@@ -183,7 +183,7 @@
                                         <table>
                                             <tr>
                                                 <td align="left" width="120px" style="border:2px solid black;margin:0">
-                                                    <img src="/images/cord.jpg" alt="cord"
+                                                    <img src="https://i.ibb.co/xScvtZ4/cord.jpg" alt="cord"
                                                         style="height:auto;display:block;" max-width="120px">
                                                 </td>
                                                 <td align="left" width="250" valign="top"
@@ -215,7 +215,7 @@
 
                                             <tr>
                                                 <td align="left" width="120px" style="border:2px solid black;margin:0">
-                                                    <img src="/images/gloves.jpg" alt="cord"
+                                                    <img src="https://i.ibb.co/pXzvP5X/gloves.jpg" alt="cord"
                                                         style="height:auto;display:block;" max-width="120px">
                                                 </td>
                                                 <td align="left" width="250" valign="top"
@@ -252,7 +252,7 @@
 
                                             <tr>
                                                 <td align="left" width="120px" style="border:2px solid black;margin:0">
-                                                    <img src="/images/knife.jpg" alt="cord"
+                                                    <img src="https://i.ibb.co/KXj1hSp/knife.jpg" alt="cord"
                                                         style="height:auto;display:block;" max-width="120px">
                                                 </td>
                                                 <td align="left" width="250" valign="top"
@@ -287,7 +287,7 @@
 
                                             <tr>
                                                 <td align="left" width="120px" style="border:2px solid black;margin:0">
-                                                    <img src="/images//caulk.jpg" alt="cord"
+                                                    <img src="https://i.ibb.co/ZHdqxL3/caulk.jpg" alt="cord"
                                                         style="height:auto;display:block;" max-width="120px">
                                                 </td>
                                                 <td align="left" width="250" valign="top"
@@ -323,7 +323,7 @@
 
                                             <tr>
                                                 <td align="left" width="120px" style="border:2px solid black;margin:0">
-                                                    <img src="/images/wd-40.jpg" alt="cord"
+                                                    <img src="https://i.ibb.co/VTJH7Fy/wd-40.jpg" alt="cord"
                                                         style="height:auto;display:block;" max-width="120px">
                                                 </td>
                                                 <td align="left" width="250" valign="top"
@@ -439,7 +439,7 @@
                                 <tr>
                                     <td width="600" align="center" style="padding:50px 0px 0px 0px;">
 
-                                        <img src="/images/transaction.png" alt="barcode"
+                                        <img src="https://i.ibb.co/ngKdYGp/transaction.png" alt="barcode"
                                             style="height:auto;display:block;">
                                     </td>
                                 </tr>
@@ -487,27 +487,27 @@
                                         <table align="center">
                                             <tr>
                                                 <td>
-                                                    <img src="/images/twitter.png" alt="twitter"
+                                                    <img src="https://i.ibb.co/QXp0rhk/twitter.png" alt="twitter"
                                                         style="height:auto;display:block;">
                                                 </td>
                                                 <td>
-                                                    <img src="/images/pinterest.png" alt="pinterest"
+                                                    <img src="https://i.ibb.co/MZzv4zP/pinterest.png" alt="pinterest"
                                                         style="height:auto;display:block;">
                                                 </td>
                                                 <td>
-                                                    <img src="/images/youtube.png" alt="youtube"
+                                                    <img src="https://i.ibb.co/4JLXmBV/youtube.png" alt="youtube"
                                                         style="height:auto;display:block;">
                                                 </td>
                                                 <td>
-                                                    <img src="/images/facebook.png" alt="facebook"
+                                                    <img src="https://i.ibb.co/8PYjy7g/facebook.png" alt="facebook"
                                                         style="height:auto;display:block;">
                                                 </td>
                                                 <td>
-                                                    <img src="/images/instagram.png" alt="instagram"
+                                                    <img src="https://i.ibb.co/GPGgx5g/instagram.png" alt="instagram"
                                                         style="height:auto;display:block;">
                                                 </td>
                                                 <td>
-                                                    <img src="/images/tiktok.png" alt="tiktok"
+                                                    <img src="https://i.ibb.co/7J8GR8Y/tiktok.png" alt="tiktok"
                                                         style="height:auto;display:block;">
                                                 </td>
                                             </tr>
